[package]
name = "wrapped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icrate = { version = "0.0.4", features = [
    "Foundation",
    "AppKit",
    "AppKit_NSWorkspace",
    "AppKit_NSRunningApplication",
    "Foundation_NSNotification",
    "Foundation_NSNotificationCenter",
    "Foundation_NSOperationQueue",
    "Foundation_NSRunLoop",
    "Foundation_NSDictionary",
    "Foundation_NSString",
] }
